package services

import (
    "context"
    "github.com/nickkh11/go-user-management/internal/pb/user"
    // импортируй что нужно, например, logger, db, etc.
)

// UserServiceServer реализует интерфейс, сгенерированный из user_grpc.pb.go
type UserServiceServer struct {
    userpb.UnimplementedUserServiceServer
    // Здесь можно хранить зависимости, например, ссылку на БД
}

func (s *UserServiceServer) CreateUser(ctx context.Context, req *userpb.CreateUserRequest) (*userpb.CreateUserResponse, error) {
    // Логика для создания пользователя
    return &userpb.CreateUserResponse{Message: "User created successfully!"}, nil
}

func (s *UserServiceServer) GetUser(ctx context.Context, req *userpb.GetUserRequest) (*userpb.GetUserResponse, error) {
    // Логика для получения пользователя
    return &userpb.GetUserResponse{Id: req.Id, Name: "John", Email: "john@example.com"}, nil
}
